Bug 1256547: When the DWM is disabled don't force presentation. r=milan

MozReview-Commit-ID: 4fd8QUWq0f1